# heat-load-calc2

./: .gitignore  BACKEND_SETUP.md  DEPLOYMENT.md  INTEGRATION_TEST_REPORT.md  README.md  railway.json  requirements.txt  test_backend_integration.mjs  tsconfig.json  実装計画.txt  熱負荷計算書テンプレート.xlsx
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/config/: excel_formula_injection.json  excel_formula_injection.yml  excel_mapping.json  excel_mapping.yml
backend/app/domain/: aggregation.py  eave_calculation.py  internal_loads.py  mechanical_loads.py  psychrometrics.py  reference_lookup.py  rounding.py  signs.py  solar_gain.py  transmission.py  ventilation.py
backend/app/models/: schemas.py
backend/reference_data/: aluminum_sash_infiltration.json  aluminum_sash_infiltration_from_excel.json  building_use_room_use.json  design_indoor_conditions.json  design_outdoor_conditions.json  design_outdoor_conditions_from_excel.json  execution_temperature_difference.json  execution_temperature_difference_from_excel.json  glass_properties_sc_u_value.json  glass_sunlit_area_ratio_numbers.json  heating_ground_temperature.json  heating_orientation_factors_from_excel.json  lighting_power_density.json  location_data.json  location_data_regions.json  material_thermal_constants.json  occupancy_density_and_heat_gain.json  others_tables.json  reference_data_manifest.json  region_coordinates.json  standard_solar_gain.json  standard_solar_gain_from_excel.json
backend/scripts/: extract_reference_tables.py
(+125 files in other folders)
